--- a/libretranslate/templates/app.js.template
+++ b/libretranslate/templates/app.js.template
@@ -3,9 +3,6 @@
 var BaseUrl = window.location.protocol + "//" + window.location.host + "{{ url_prefix }}" ;
 var htmlRegex = /<(.*)>.*?|<(.*)\/>/;
 document.addEventListener('DOMContentLoaded', function(){
-    var sidenavElems = document.querySelectorAll('.sidenav');
-    var sidenavInstances = M.Sidenav.init(sidenavElems);
-
     var app = new Vue({
         el: '#app',
         delimiters: ['[[',']]'],
@@ -54,7 +51,7 @@ document.addEventListener('DOMContentLoaded', function(){
 
             const langsRequest = new XMLHttpRequest();
             langsRequest.open("GET", BaseUrl + "/languages", true);
-            
+
             settingsRequest.onload = function() {
                 if (this.status >= 200 && this.status < 400) {
                     self.settings = JSON.parse(this.response);
@@ -100,33 +97,8 @@ document.addEventListener('DOMContentLoaded', function(){
             {% if api_secret %}self[_=String.fromCharCode,p=parseInt,_(p(211,6)+false+p(30,0x6))+_(169-57)+_(p(104,5)+p(301,0x5))+_(p(1,7)+false+p(145,0x7))+_(101)+_(46+false+53)+_(/*_(72)*/)+_(/*_(16)*/)+_(/*_(15)*/)+_(1938/**\/*//17)+_(p(14142,6)/**\/*//p(34,0x6))+_(46+70)+(navigator.webdriver?"t":"")] = {{ api_secret }}; {% endif %}
         },
         updated: function(){
-            if (this.isSuggesting) return;
-
-            M.FormSelect.init(this.$refs.sourceLangDropdown);
-            M.FormSelect.init(this.$refs.targetLangDropdown);
-
             if (this.$refs.inputTextarea){
                 this.$refs.inputTextarea.focus()
-
-                if (this.inputText === ""){
-                    this.$refs.inputTextarea.style.height = this.inputTextareaHeight + "px";
-                    this.$refs.translatedTextarea.style.height = this.inputTextareaHeight + "px";
-                } else{
-                    this.$refs.inputTextarea.style.height = this.$refs.translatedTextarea.style.height = "1px";
-                    this.$refs.inputTextarea.style.height = Math.max(this.inputTextareaHeight, this.$refs.inputTextarea.scrollHeight + 32) + "px";
-                    this.$refs.translatedTextarea.style.height = Math.max(this.inputTextareaHeight, this.$refs.translatedTextarea.scrollHeight + 32) + "px";
-                }
-            }
-
-            // Update "selected" attribute (to overcome a vue.js limitation)
-            // but properly display checkmarks on supported browsers.
-            // Also change the <select> width value depending on the <option> length
-            if (this.$refs.sourceLangDropdown) {
-                updateSelectedAttribute(this.$refs.sourceLangDropdown, this.sourceLang);
-            }
-
-            if (this.$refs.targetLangDropdown) {
-                updateSelectedAttribute(this.$refs.targetLangDropdown, this.targetLang);
             }
         },
         computed: {
@@ -342,7 +314,7 @@ document.addEventListener('DOMContentLoaded', function(){
                     try{
                         var res = JSON.parse(this.response);
                         if (res.success){
-                            M.toast({html: {{ _e("Thanks for your correction. Note the suggestion will not take effect right away.") }} })
+                            alert({{ _e("Thanks for your correction. Note the suggestion will not take effect right away.") }})
                             self.closeSuggestTranslation(e)
                         }else{
                             throw new Error(res.error || {{ _e("Unknown error") }});
@@ -518,24 +490,6 @@ function handleNotification(title, body) {
  * @param {object} langDropdown
  * @param {string} lang
  */
-function updateSelectedAttribute(langDropdown, lang) {
-    for (const child of langDropdown.children) {
-        if (child.value === lang){
-            child.setAttribute('selected', '');
-            langDropdown.style.width = getTextWidth(child.text) + 24 + 'px';
-        } else{
-            child.removeAttribute('selected');
-        }
-    }
-}
-
-function getTextWidth(text) {
-    var canvas = getTextWidth.canvas || (getTextWidth.canvas = document.createElement("canvas"));
-    var ctx = canvas.getContext("2d");
-    ctx.font = 'bold 16px sans-serif';
-    var textWidth = Math.ceil(ctx.measureText(text).width);
-    return textWidth;
-}
 
 function setApiKey(){
     var prevKey = localStorage.getItem("api_key") || "";
@@ -549,83 +503,5 @@ function setApiKey(){
     }
 }
 
-// Color scheme handling
-function getPreferredColorScheme(){
-  var systemScheme = 'light';
-  if(window.matchMedia('(prefers-color-scheme: dark)').matches){
-    systemScheme = 'dark';
-  }
-  var chosenScheme = systemScheme;
-
-  if(localStorage.getItem("scheme")){
-    chosenScheme = localStorage.getItem("scheme");
-  }
-
-  if(systemScheme === chosenScheme){
-    localStorage.removeItem("scheme");
-  }
-
-  return chosenScheme;
-}
-
-// Write chosen color scheme to local storage
-// Unless the system scheme matches the stored scheme, in which case... remove from local storage
-function savePreferredColorScheme(scheme){
-  var systemScheme = 'light';
-
-  if(window.matchMedia('(prefers-color-scheme: dark)').matches){
-    systemScheme = 'dark';
-  }
-
-  if(systemScheme === scheme){
-    localStorage.removeItem("scheme");
-  } else {
-    localStorage.setItem("scheme", scheme);
-  }
-
-}
-
-// Get the current scheme, and apply the opposite
-function toggleColorScheme(){
-  let newScheme = "light";
-  let scheme = getPreferredColorScheme();
-  if (scheme === "light"){
-    newScheme = "dark";
-  }
-
-  applyPreferredColorScheme(newScheme);
-}
-
-// Apply the chosen color scheme by traversing stylesheet rules, and applying a medium.
-function applyPreferredColorScheme(scheme) {
-    for (var s = 0; s < document.styleSheets.length; s++) {
-        for (var i = 0; i < document.styleSheets[s].cssRules.length; i++) {
-            rule = document.styleSheets[s].cssRules[i];
-            if (rule && rule.media && rule.media.mediaText.includes("prefers-color-scheme")) {
-                switch (scheme) {
-                    case "light":
-                        rule.media.appendMedium("original-prefers-color-scheme");
-                        if (rule.media.mediaText.includes("light")) rule.media.deleteMedium("(prefers-color-scheme: light)");
-                        if (rule.media.mediaText.includes("dark")) rule.media.deleteMedium("(prefers-color-scheme: dark)");
-                        break;
-                    case "dark":
-                        rule.media.appendMedium("(prefers-color-scheme: light)");
-                        rule.media.appendMedium("(prefers-color-scheme: dark)");
-                        if (rule.media.mediaText.includes("original")) rule.media.deleteMedium("original-prefers-color-scheme");
-                        break;
-                    default:
-                        rule.media.appendMedium("(prefers-color-scheme: dark)");
-                        if (rule.media.mediaText.includes("light")) rule.media.deleteMedium("(prefers-color-scheme: light)");
-                        if (rule.media.mediaText.includes("original")) rule.media.deleteMedium("original-prefers-color-scheme");
-                        break;
-                }
-            }
-        }
-    }
-
-    savePreferredColorScheme(scheme);
-}
-
-applyPreferredColorScheme(getPreferredColorScheme());
 
 // @license-end
